added das, arr, 7bag, gameover
added 7bag generator
added 2 extra line for pieces to spawn at
added gameover screen (kinda)

improved control (DAS, ARR)

--- a/main.html
+++ b/main.html
@@ -14,6 +14,14 @@
 </div>
 
 
+<!-- game over popup -->
+<div id="gameOverPopup" style="display: none; vertical-align: middle;">
+    <p style="color: white; text-align: center; font-size: 80px;">
+        Game Over :(
+    </p>
+</div>
+
+
 
 </body>
 
