--- a/main.html
+++ b/main.html
@@ -11,7 +11,12 @@
 <div style="width: 100%; height: 100%;">
     <!-- tetris space -->
     <div id="gridsContainer"></div>
+
+    <div class="ui_left">
+        <div>Line Cleared: <span id="ui_lineCleared"></span></div>
+    </div>
 </div>
+
 
 
 <!-- game over popup -->
