--- a/main.html
+++ b/main.html
@@ -10,10 +10,25 @@
 <!-- centering the game space -->
 <div style="width: 100%; height: 100%;">
     <!-- tetris space -->
-    <div id="gridsContainer"></div>
+    <div style="display: flex; flex-wrap: nowrap; width: 800px; margin: 0 auto;">
+        <div id="holdPiece">
+            <div><div></div><div></div><div></div><div></div></div>
+        </div>
+        <div id="gridsContainer"></div>
+        <div id="nextPieces">
+            <div><div> </div><div> </div><div> </div><div> </div></div>
+            <div><div> </div><div> </div><div> </div><div> </div></div>
+            <div><div> </div><div> </div><div> </div><div> </div></div>
+            <div><div> </div><div> </div><div> </div><div> </div></div>
+            <div><div> </div><div> </div><div> </div><div> </div></div>
+        </div>
+    </div>
 
     <div class="ui_left">
         <div>Line Cleared: <span id="ui_lineCleared"></span></div>
+    </div>
+
+    <div class="ui_right">
     </div>
 </div>
 
