shadow, tspin, mediaQuery
added:
piece shadow
t-spin detector
counter (t-spin, quad)
media query (switch to smaller grid) for lower resolution screen

--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
     <title>Tetris</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script defer src="script.js"></script>
 </head>
 <body style="background-color: #333333;">
 <!-- centering the game space -->
@@ -26,6 +28,8 @@
 
     <div class="ui_left">
         <div>Line Cleared: <span id="ui_lineCleared"></span></div>
+        <div>T-spins: <span id="ui_tSpin"></span></div>
+        <div>Quads: <span id="ui_quad"></span></div>
     </div>
 
     <div class="ui_right">
@@ -44,6 +48,4 @@
 
 
 </body>
-
-<script src="script.js"></script>
 </html>
